[gd_scene load_steps=10 format=3 uid="uid://dvlgq6xjep4er"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_5eog6"]
[ext_resource type="Script" path="res://scripts/body_part.gd" id="2_yok0s"]
[ext_resource type="PackedScene" uid="uid://cwxttka4tm61n" path="res://scenes/part_manager.tscn" id="3_cnanu"]

[sub_resource type="Animation" id="Animation_5mrl5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftHand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.39626]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("leftLeg:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.174533]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("rightleg:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.174533]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("rightHand:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.872665]
}

[sub_resource type="Animation" id="Animation_pw7my"]
resource_name = "left_hand_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftHand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.39626, 2.44346, 1.39626]
}

[sub_resource type="Animation" id="Animation_rwuno"]
resource_name = "left_leg_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("leftLeg:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.174533, 1.5708, 0.174533]
}

[sub_resource type="Animation" id="Animation_7k01c"]
resource_name = "right_hand_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rightHand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.872665, 1.39626, 0.872665]
}

[sub_resource type="Animation" id="Animation_2p053"]
resource_name = "right_leg_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rightleg:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.174533, 1.22173, -0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_17uh5"]
_data = {
"RESET": SubResource("Animation_5mrl5"),
"left_hand_attack": SubResource("Animation_pw7my"),
"left_leg_attack": SubResource("Animation_rwuno"),
"right_hand_attack": SubResource("Animation_7k01c"),
"right_leg_attack": SubResource("Animation_2p053")
}

[node name="Player" type="Node2D"]
script = ExtResource("1_5eog6")

[node name="Head" type="Node2D" parent="."]
position = Vector2(-116, -696)
script = ExtResource("2_yok0s")

[node name="LeftHand" type="Node2D" parent="."]
position = Vector2(-164, -634)
rotation = 1.39626
script = ExtResource("2_yok0s")

[node name="leftLeg" type="Node2D" parent="."]
position = Vector2(-28, -386)
rotation = 0.174533
script = ExtResource("2_yok0s")

[node name="rightleg" type="Node2D" parent="."]
position = Vector2(54, -372)
rotation = -0.174533
script = ExtResource("2_yok0s")

[node name="chest" type="Node2D" parent="."]
position = Vector2(-24, -500)
script = ExtResource("2_yok0s")

[node name="rightHand" type="Node2D" parent="."]
position = Vector2(-36, -717)
rotation = 0.872665
script = ExtResource("2_yok0s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_17uh5")
}

[node name="part_manager" parent="." node_paths=PackedStringArray("head", "chest", "left_hand", "right_hand", "left_leg", "right_leg") instance=ExtResource("3_cnanu")]
head = NodePath("../Head")
chest = NodePath("../chest")
left_hand = NodePath("../LeftHand")
right_hand = NodePath("../rightHand")
left_leg = NodePath("../leftLeg")
right_leg = NodePath("../rightleg")
